unfavorite, favorite, retweet, and unretweet features implemented, but retweet icon will not change color when tapped

--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="TwitterLogoBlue" translatesAutoresizingMaskIntoConstraints="NO" id="KMY-gb-DAH">
-                                <rect key="frame" x="179.5" y="234" width="16" height="16"/>
+                                <rect key="frame" x="87.5" y="50" width="200" height="200"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -112,6 +112,9 @@
                                                     <rect key="frame" x="99" y="84" width="84" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button" image="retweet-icon"/>
+                                                    <connections>
+                                                        <action selector="didTapRetweet:" destination="8cj-fe-lQv" eventType="touchUpInside" id="Siy-WM-j1G"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9fP-Hc-lku">
                                                     <rect key="frame" x="141" y="90" width="42" height="21"/>
@@ -124,6 +127,10 @@
                                                     <rect key="frame" x="211" y="84" width="84" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button" image="favor-icon"/>
+                                                    <state key="selected" image="favor-icon-red"/>
+                                                    <connections>
+                                                        <action selector="didTapLike:" destination="8cj-fe-lQv" eventType="touchUpInside" id="zSb-cX-NtK"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ko9-jw-ouU">
                                                     <rect key="frame" x="254" y="-2" width="121" height="21"/>
@@ -143,8 +150,8 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="commentButton" destination="Uie-ji-AVa" id="Uy3-j0-1JE"/>
-                                            <outlet property="likeButton" destination="eRu-Kw-DVo" id="f1T-Oy-zHf"/>
-                                            <outlet property="likeCountButton" destination="Fd5-vh-pna" id="HVc-6b-xyK"/>
+                                            <outlet property="likeButton" destination="eRu-Kw-DVo" id="PEx-Af-PBX"/>
+                                            <outlet property="likeCountLabel" destination="Fd5-vh-pna" id="WZM-1L-xGZ"/>
                                             <outlet property="nameLabel" destination="l8E-Cw-eas" id="jRs-0H-g45"/>
                                             <outlet property="profilePictureImage" destination="bIP-Eb-B7X" id="FfM-iZ-qg0"/>
                                             <outlet property="retweetButton" destination="BwN-f4-J3D" id="twv-QS-erp"/>
@@ -189,8 +196,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="What's happening?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qMm-da-cRE">
-                                <rect key="frame" x="33" y="79" width="314" height="164"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="What's happening" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QK7-iY-uUx">
+                                <rect key="frame" x="36" y="90" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -213,7 +220,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="composeTweetText" destination="qMm-da-cRE" id="ZCq-Rk-Ggk"/>
+                        <outlet property="composeTweetText" destination="QK7-iY-uUx" id="xUD-IQ-vKv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zv7-Uy-zsx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -263,6 +270,7 @@
         <image name="close-icon" width="26" height="24"/>
         <image name="edit-icon" width="30" height="27"/>
         <image name="favor-icon" width="30" height="30"/>
+        <image name="favor-icon-red" width="30" height="30"/>
         <image name="reply-icon" width="30" height="30"/>
         <image name="retweet-icon" width="30" height="30"/>
     </resources>
